<resources>
    <string name="app_name">ChatbOx</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out">log out</string>
    <string name="profile">Profile</string>
    <string name="sender_message">Sender Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ayush">Ayush</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="not_have_an_id">Not Have an Id?</string>
    <string name="signup">Signup</string>
    <string name="type_a_message">Type a Message</string>
    <string name="calling">Calling</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="call">Call</string>
    <string name="image">image</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="chat_box">ChatBox</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_youre_mail">Enter your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="not_have_an_id1">Not have an ID?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="signup1">Signup</string>
    <string name="type_a_message1">Type a message</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="call1">Call</string>
    <string name="signuP">SIGNUP ➤</string>
    <string name="enter_your_status" />
    <string name="update">UPDATE</string>
    <string name="save">SAVE</string>
    <string name="enter_your_status1">Enter your Status</string>
    <string name="enter_your_status2">Enter your Status</string>
    <string name="logo_of_the_app">Logo of the app</string>
    <string name="name1">Name</string>
    <string name="status2">Status</string>
    <string name="email1">Email</string>
    <string name="resert_password">Resert Password</string>
    <string name="update1">UPDATE?</string>
    <string name="recever_message">Recever Message</string>
    <string name="profile2">profile2</string>
</resources>